[package]
name = "digital_signature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
serde = {version = "1.0", features = ['derive']}
sha2 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2", features = ['pkcs8', "pem"]}
generic-array = "0.14.7"
hex = "0.4"
